# Niblet

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
prototype/: index.html
prototype/css/: styles.css
prototype/js/: app.js
scripts/: package-windows-portable.mjs  stage-release-assets.mjs
src/: App.tsx  ErrorBoundary.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  onedrive.rs  sync.rs  tasks.rs  vault.rs
src/components/CommandPalette/: CommandPalette.tsx
src/components/Editor/: ImageView.tsx  (+11 more)
src/hooks/: useHoverCardPosition.ts  useNoteLinkInteractions.ts
src/lib/: blockEditorMenus.ts  blockInput.ts  blockParser.ts  breadcrumbs.ts  codeHighlight.ts  codeLanguages.ts  codeMirrorBlock.ts  codeStaticHighlight.ts  conflictResolver.ts  dailyNotes.ts  folderTree.ts  hoverPreviewGeometry.ts  imageCache.ts  imageNames.ts  linkParser.ts  markdown.ts  noteLinkDom.ts  notePreview.ts  noteTasks.ts  onedrive.ts  patchOpenTabs.ts  taskMetaSuggest.ts  taskParser.ts  tauri.ts  vaultPaths.ts  wikilinkCm.ts  wikilinkDisplay.ts  wikilinkSuggest.ts  workspacePersist.ts  workspaceState.ts
src/stores/: databaseViewStore.ts  hoverPreviewStore.ts  linksStore.ts  notesStore.ts  syncStore.ts  tabSelectors.ts  tabsStore.ts  tasksStore.ts  uiStore.ts  vaultStore.ts  workspaceStore.ts
src/styles/: components.css  layout.css  tokens.css
(+44 files in other folders)
